k8s/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: battleskell
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`battleskell.dellinger.dev`)
      services:
        - kind: Service
          name: battleskell
          passHostHeader: true
          port: 80
  tls:
    secretName: battleskell-cert
